Vova's changes fixed + hidden Social responsibility section added + adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
                     <a href="#geography" class="header_menu_link">Global Network</a>
                 </li>
                 <li class="header_menu_item">
+                    <a href="#social" class="header_menu_link">Social responsibility</a>
+                </li>
+                <li class="header_menu_item">
                     <a href="#contacts" class="header_menu_link">Contacts</a>
                 </li>
             </ul>
@@ -58,6 +61,9 @@
                         <a href="#geography" class="side_menu_link">Geography</a>
                     </li>
                     <li class="side_menu_item">
+                        <a href="#social" class="side_menu_link">Social responsibility</a>
+                    </li>
+                    <li class="side_menu_item">
                         <a href="#contacts" class="side_menu_link">Contacts</a>
                     </li>
                 </ul>
@@ -74,7 +80,7 @@
 <!--                    <h1 class="promo_title">Paragon</h1>-->
 <!--                    <div class="promo_divider"></div>-->
                     <div class="promo_desc">
-                        We empower businesses with <div class="promo_desc_marked">tomorrow economy expertise</div> for sustainable growth to create <div class="promo_desc_marked">long term value</div> for our investors
+                        <div class="promo_desc_marked">We empower businesses</div> with tomorrow<div class="promo_desc_marked">economy expertise</div> for sustainable growth <div class="promo_desc_marked">to create long term value</div> for our investors
                     </div>
                     <div class="promo_subtitle">
                         Who we are
@@ -126,9 +132,9 @@
                     <div class="factors_wrapper">
                         <div class="factors_item">
                             <img src="img/factor_one.svg" alt="factor_one" class="factors_item_img">
-                            <div class="factors_item_title">Future economy expertise</div>
+                            <div class="factors_item_title">Big vision supported by deep expertise</div>
                             <div class="factors_item_desc">
-                                We enable businesses to create efficient strategies for the future economy powered by high-end technology and collaborative consumption.
+                                We bring deep expertise to every sector in which our group operates. Our area of interest includes a number of advanced industries - from tech to real estate.
                             </div>
                         </div>
                         <div class="factors_item">
@@ -153,7 +159,8 @@
     <section class="team" id="team">
         <div class="container">
             <h1 class="team_title">Who we are</h1>
-            <div class="team_wrapper">
+            <div class="team_wrapper team_active">
+<!--                -->
                 <a href="https://uk.linkedin.com/in/abdumalik-mirakhmedov?original_referer=https%3A%2F%2Fwww.google.ru%2F" target="_blank" class="team_item">
                     <img src="img/team_one.svg" alt="team_one">
                     <div class="team_text">
@@ -163,10 +170,11 @@
                             / strategy</div>
                     </div>
                 </a>
+<!--                -->
                 <a href="https://www.linkedin.com/in/rashitmakhat/" target="_blank" class="team_item">
                     <img src="img/team_two.svg" alt="team_two">
                     <div class="team_text">
-                        <div class="team_text_title">Rahsit Makhat</div>
+                        <div class="team_text_title">Rashit Makhat</div>
                         <div class="divider"></div>
                         <div class="team_text_desc">technology <br>
                             / strategy</div>
@@ -182,17 +190,18 @@
 <!--                    </div>-->
 <!--                </div>-->
             </div>
-        </div>
-        <div class="team_item_extended">
-            <img src="img/team_one.svg" alt="team_one">
-            <div class="team_text">
-                <div class="team_text_title">Abdumalik </br>Mirakhmedov</div>
-                <div class="divider"></div>
-                <div class="team_text_desc">global finance <br>
-                    / strategy</div>
-            </div>
-            <div class="team_text_extended">A London Business School Alumnus (EMBA), serial entrepreneur and investor with business interests in HPC, AI, SaaS, development and telecommunications sectors.  He has over 15 years of experience across telecommunication, mining, real estate, HPC, asset management and banking industries.` </div>
-            <div class="close_button">x</div>
+<!--            FIXME maybe unnecessary?-->
+<!--            <div class="team_item_extended">-->
+<!--                <img src="img/team_one.svg" alt="team_one">-->
+<!--                <div class="team_text">-->
+<!--                    <div class="team_text_title">Abdumalik </br>Mirakhmedov</div>-->
+<!--                    <div class="divider"></div>-->
+<!--                    <div class="team_text_desc">global finance <br>-->
+<!--                        / strategy</div>-->
+<!--                </div>-->
+<!--                <div class="team_text_extended">Entrepreneur and investor in growing technologically advanced and industry-specific products across the areas of HPC, SaaS and AI.  </div>-->
+<!--                <div class="close_button">x</div>-->
+<!--            </div>-->
         </div>
     </section>
 <!--    <section class="projects" id="projects">-->
@@ -280,6 +289,41 @@
                 <h1 class="network_popup_title">Dubai</h1>
                 <div class="network_popup_desc">Opus Tower, office B1501, Business Bay, Dubai, UAE</div>
                 <div class="network_popup_phone">+9 (714) 777 77 77 <br> +9 (714) 555 55 55</div>
+            </div>
+        </div>
+    </section>
+    <section class="social" id="social">
+        <div class="container">
+            <div class="social_borders">
+                <div class="social_content">
+                    <h1 class="social_title">Social responsibility</h1>
+                    <div class="social_content_wrapper">
+                        <div class="social_img_borders">
+                            <img src="img/social.svg" alt="social" class="social_img">
+                        </div>
+                        <div class="social_desc">
+                            <h1 class="social_desc_title">Paragon Group supports a number of corporate social responsibility programs to enrich and improve the lives of the communities in which we operate. </h1>
+                            <div class="social_desc_text">
+                                Our corporate social responsibility has several main directions:
+
+                                <div class="social_desc_text_with_dot">
+                                    Fair business practice: development of activities for the welfare of society, minimizing social and environmental costs of business development, increasing the efficiency of workplaces;
+                                </div>
+
+                                <div class="social_desc_text_with_dot">
+                                    Team development: attracting highly qualified personnel, creating opportunities for realizing the potential through the use of best practices, investing in the development of personnel;
+                                </div>
+
+                                <div class="social_desc_text_with_dot">
+                                    Environmental protection: adherence to the principles of the most careful and rational attitude to the environment;
+                                </div>
+
+                                <div class="social_desc_text_with_dot">
+                                    Encouragement of charity and sponsorship: implementation of charitable programs, encouragement of personal contribution to charity.</div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
