--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/styless.min.css">
+    <link rel="stylesheet" href="css/stylesss.min.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.svg">
     <title>The Paragon</title>
 </head>
 
