Rahsit image changed

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/stylesss.min.css">
+    <link rel="stylesheet" href="css/stylez.min.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.svg">
     <title>The Paragon</title>
 </head>
@@ -173,7 +173,7 @@
                 </a>
 <!--                -->
                 <a href="https://www.linkedin.com/in/rashitmakhat/" target="_blank" class="team_item">
-                    <img src="img/team_two.svg" alt="team_two">
+                    <img src="img/team_two.jpg" alt="team_two" class="team_item_img">
                     <div class="team_text">
                         <div class="team_text_title">Rashit Makhat</div>
                         <div class="divider"></div>
