Abdumalik image changed + promo text margin fixed

--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
             <div class="team_wrapper team_active">
 <!--                -->
                 <a href="https://uk.linkedin.com/in/abdumalik-mirakhmedov?original_referer=https%3A%2F%2Fwww.google.ru%2F" target="_blank" class="team_item">
-                    <img src="img/team_one.svg" alt="team_one">
+                    <img src="img/team_one.jpg" alt="team_one" class="team_item_img">
                     <div class="team_text">
                         <div class="team_text_title">Abdumalik Mirakhmedov</div>
                         <div class="divider"></div>
