--- a/src/index.html
+++ b/src/index.html
@@ -287,39 +287,41 @@
                 <div id="myearth" class="earth-container"></div>
             </div>
             <div class="network_popup">
-<!--                <h1 class="network_popup_title">Dubai</h1>-->
-                <ul class="network_popup_desc">
-                    <li class="network_popup_item">
-                        San Jose, USA
-                    </li>
-                    <li class="network_popup_item">
-                        Houston, USA
-                    </li>
-                    <li class="network_popup_item">
-                        Belgrade, Serbia
-                    </li>
-                    <li class="network_popup_item">
-                        Cairo, Egypt
-                    </li>
-                    <li class="network_popup_item">
-                        Dubai, UAE
-                    </li>
-                    <li class="network_popup_item">
-                        Astana, Kazakhstan
-                    </li>
-                    <li class="network_popup_item">
-                        Singapore
-                    </li>
-                    <li class="network_popup_item">
-                        Jakarta, Indonesia
-                    </li>
-                    <li class="network_popup_item">
-                        Ho Chi Minh City, Indonesia
-                    </li>
-                    <li class="network_popup_item">
-                        Manila, Philippines
-                    </li>
-                </ul>
+                <h1 class="network_popup_title">Dubai</h1>
+                <div class="network_popup_desc">Opus Tower, office B1501, Business Bay, Dubai, UAE</div>
+                <div class="network_popup_phone">+9 (714) 777 77 77 <br> +9 (714) 555 55 55</div>
+<!--                <ul class="network_popup_desc">-->
+<!--                    <li class="network_popup_item">-->
+<!--                        San Jose, USA-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Houston, USA-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Belgrade, Serbia-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Cairo, Egypt-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Dubai, UAE-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Astana, Kazakhstan-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Singapore-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Jakarta, Indonesia-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Ho Chi Minh City, Indonesia-->
+<!--                    </li>-->
+<!--                    <li class="network_popup_item">-->
+<!--                        Manila, Philippines-->
+<!--                    </li>-->
+<!--                </ul>-->
             </div>
         </div>
     </section>
