comment button event attempt Phone numbers hidden

--- a/src/index.html
+++ b/src/index.html
@@ -289,7 +289,7 @@
             <div class="network_popup">
                 <h1 class="network_popup_title">Dubai</h1>
                 <div class="network_popup_desc">Opus Tower, office B1501, Business Bay, Dubai, UAE</div>
-                <div class="network_popup_phone">+9 (714) 777 77 77 <br> +9 (714) 555 55 55</div>
+<!--                <div class="network_popup_phone">+9 (714) 777 77 77 <br> +9 (714) 555 55 55</div>-->
 <!--                <ul class="network_popup_desc">-->
 <!--                    <li class="network_popup_item">-->
 <!--                        San Jose, USA-->
