Promo arrow removed + team name fixed height

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="promo_arrow"></div>
+<!--        <div class="promo_arrow"></div>-->
     </section>
     <section class="vision" id="vision">
         <div class="container">
