--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/stylezz.min.css">
+    <link rel="stylesheet" href="css/stylezzz.min.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.svg">
     <title>The Paragon</title>
 </head>
@@ -81,13 +81,13 @@
 <!--                    <h1 class="promo_title">Paragon</h1>-->
 <!--                    <div class="promo_divider"></div>-->
                     <div class="promo_desc">
-                        <div class="promo_desc_marked">We empower businesses</div> with tomorrow<div class="promo_desc_marked">economy expertise</div> for sustainable growth <div class="promo_desc_marked">to create long term value</div> for our investors
+                        <div class="promo_desc_marked">We empower businesses</div> with tomorrow's<div class="promo_desc_marked">economic expertise</div> in sustainable growth, <div class="promo_desc_marked"> create long term value</div> for our investors
                     </div>
                     <div class="promo_subtitle">
                         Who we are
                     </div>
                     <div class="promo_subdesc">
-                        Paragon is a family office, specializing in active wealth management. We maximize return on investment by bringing our deep expertise into strategic and operational management.
+                        Paragon is a family office specializing in active wealth management. We maximize return on investment through our deep understanding of strategic and operational management.
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="vision_desc">
-                Our vision is to ensure scalability of world-changing ideas through delivering deep expertise, fundamental knowledge and best practices to high-potential projects
+                Our vision is to ensure adaptable, world-changing ideas, by delivering deep expertise, fundamental knowledge and best practices to high-potential projects
             </div>
         </div>
     </section>
@@ -135,21 +135,21 @@
                             <img src="img/factor_one.svg" alt="factor_one" class="factors_item_img">
                             <div class="factors_item_title">Big vision supported by deep expertise</div>
                             <div class="factors_item_desc">
-                                We bring deep expertise to every sector in which our group operates. Our area of interest includes a number of advanced industries - from tech to real estate.
+                                We bring profound skills to every sector where our group operates. Our area of interest covers a range of advanced industries, from tech to real estate.
                             </div>
                         </div>
                         <div class="factors_item">
                             <img src="img/factor_two.svg" alt="factor_two" class="factors_item_img">
                             <div class="factors_item_title">Operational efficiency</div>
                             <div class="factors_item_desc">
-                                We empower businesses with the best practices to strengthen the supply chain, bringing excellence to integration, operations, purchasing and distribution.
+                                We empower businesses with best practices to strengthen the supply chain, bringing excellence to integration, operations, purchasing and distribution.
                             </div>
                         </div>
                         <div class="factors_item">
                             <img src="img/factor_three.svg" alt="factor_three" class="factors_item_img">
                             <div class="factors_item_title">Scalability <br> excellence</div>
                             <div class="factors_item_desc">
-                                We help businesses to scale up by providing new business opportunities, supporting steady and effective expansion to the global market.
+                                We help businesses scale up by creating new opportunities, supporting steady and effective expansion to the global market.
                             </div>
                         </div>
                     </div>
@@ -335,24 +335,27 @@
                             <img src="img/social.svg" alt="social" class="social_img">
                         </div>
                         <div class="social_desc">
-                            <h1 class="social_desc_title">Paragon Group supports a number of corporate social responsibility programs to enrich and improve the lives of the communities in which we operate. </h1>
+                            <h1 class="social_desc_title">
+                                Paragon Group supports a number of corporate social responsibility programmes to enrich and improve the lives of the communities where we operate.
+                            </h1>
                             <div class="social_desc_text">
                                 Our corporate social responsibility has several main directions:
 
                                 <div class="social_desc_text_with_dot">
-                                    Fair business practice: development of activities for the welfare of society, minimizing social and environmental costs of business development, increasing the efficiency of workplaces;
+                                    Fair business practice: development of activities for the welfare of society, minimizing social and environmental business development costs, increasing workplace efficiency;
                                 </div>
 
                                 <div class="social_desc_text_with_dot">
-                                    Team development: attracting highly qualified personnel, creating opportunities for realizing the potential through the use of best practices, investing in the development of personnel;
+                                    Team development: attracting highly qualified personnel, creating opportunities to realize potential through best practices, and investment in individual development;
                                 </div>
 
                                 <div class="social_desc_text_with_dot">
-                                    Environmental protection: adherence to the principles of the most careful and rational attitude to the environment;
+                                    Environmental protection: upholding the principles of a thoughtful and logical approach to preserving the natural world;
                                 </div>
 
                                 <div class="social_desc_text_with_dot">
-                                    Encouragement of charity and sponsorship: implementation of charitable programs, encouragement of personal contribution to charity.</div>
+                                    Encouragement of charity and sponsorship: implementing charitable programmes and encouraging personal contribution to good causes;
+                                </div>
                                 </div>
                         </div>
                     </div>
@@ -368,7 +371,7 @@
     </footer>
     <script src="js/miniature.earth.js"></script>
 <!--    <script src="js/miniature.earth.core.js"></script>-->
-    <script src="js/bundle.js"></script>
+    <script src="js/bundle.js?v=2"></script>
 </body>
 
 </html>
