--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/stylezzz.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.svg">
     <title>The Paragon</title>
 </head>
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="header_wrapper">
-            <img src="img/header_logo.svg" alt="logo">
+            <img src="img/header_logo.svg" alt="logo" class="promo_img">
 
             <ul class="header_menu">
                 <li class="header_menu_item">
