Contacts on full screen

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/stylee.min.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.svg">
     <title>The Paragon</title>
 </head>
@@ -364,10 +364,12 @@
         </div>
     </section>
     <footer class="footer" id="contacts">
-        <h1 class="footer_title">Contacts</h1>
-        <h2 class="footer_subtitle">Opus Tower, office B1501, Business Bay, Dubai, UAE</h2>
-        <div class="footer_divider"></div>
-        <h2 class="footer_subtitle" style="margin: unset">info@paragongroup.ae</h2>
+        <div class="footer_content">
+            <h1 class="footer_title">Contacts</h1>
+            <h2 class="footer_subtitle">Opus Tower, office B1501, Business Bay, Dubai, UAE</h2>
+            <div class="footer_divider"></div>
+            <h2 class="footer_subtitle" style="margin: unset">info@paragongroup.ae</h2>
+        </div>
     </footer>
     <script src="js/miniature.earth.js"></script>
 <!--    <script src="js/miniature.earth.core.js"></script>-->
