Big adaptation fix

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/stylee.min.css">
+    <link rel="stylesheet" href="css/styles.min.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.svg">
     <title>The Paragon</title>
 </head>
@@ -81,7 +81,7 @@
 <!--                    <h1 class="promo_title">Paragon</h1>-->
 <!--                    <div class="promo_divider"></div>-->
                     <div class="promo_desc">
-                        <div class="promo_desc_marked">We empower businesses</div> with tomorrow's<div class="promo_desc_marked">economic expertise</div> in sustainable growth, <div class="promo_desc_marked"> create long term value</div> for our investors
+                        <div class="promo_desc_marked">We empower businesses</div> with tomorrow's<div class="promo_desc_marked">economic expertise</div> in sustainable growth, <div class="promo_desc_marked"> create long term value</div>
                     </div>
                     <div class="promo_subtitle">
                         Who we are
@@ -138,6 +138,7 @@
                                 We bring profound skills to every sector where our group operates. Our area of interest covers a range of advanced industries, from tech to real estate.
                             </div>
                         </div>
+                        <div class="factors_divider"></div>
                         <div class="factors_item">
                             <img src="img/factor_two.svg" alt="factor_two" class="factors_item_img">
                             <div class="factors_item_title">Operational efficiency</div>
@@ -145,6 +146,7 @@
                                 We empower businesses with best practices to strengthen the supply chain, bringing excellence to integration, operations, purchasing and distribution.
                             </div>
                         </div>
+                        <div class="factors_divider"></div>
                         <div class="factors_item">
                             <img src="img/factor_three.svg" alt="factor_three" class="factors_item_img">
                             <div class="factors_item_title">Scalability <br> excellence</div>
@@ -331,8 +333,10 @@
                 <div class="social_content">
                     <h1 class="social_title">Social responsibility</h1>
                     <div class="social_content_wrapper">
-                        <div class="social_img_borders">
-                            <img src="img/social.svg" alt="social" class="social_img">
+                        <div class="social_img_wrapper">
+                            <div class="social_img_borders">
+                                <img src="img/social.svg" alt="social" class="social_img">
+                            </div>
                         </div>
                         <div class="social_desc">
                             <h1 class="social_desc_title">
